--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,9 @@
     "require": {
         "guzzlehttp/guzzle": "^6.3",
         "firebase/php-jwt": "^5.0",
-        "zendframework/zend-config": "^3.1"
+        "zendframework/zend-config": "^3.1",
+        "vlucas/phpdotenv": "^2.4",
+        "larapack/dd": "^1.1"
     },
     "require-dev": {
         "phpunit/phpunit": "^7.0"
