--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "amsxbg/box-jwt",
+    "name": "greenbicycle/box-jwt",
     "require": {
         "guzzlehttp/guzzle": "^6.3",
         "firebase/php-jwt": "^5.0",
@@ -9,10 +9,10 @@
         "phpunit/phpunit": "^7.0"
     },
     "autoload": {
-        "psr-4": {
-            "Box\\": "src/"
-        }
-    },
+    "psr-4": {
+        "Box\\": "src/"
+    }
+},
     "autoload-dev": {
         "psr-4": {
             "Tests\\": "tests/"
