--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
 composer.phar
-/vendor/
-.vagrant
-Vagrantfile
+vendor/
+logs/
 private_key.pem
 public_key.pem
 .DS_Store
 box.config.php
 phpunit.xml
 composer.lock
+*.json
